# BaCE

./: .gitignore  README.md  index.html  package.json  vite.config.js
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  folder.rs  lib.rs  settings.rs  webp_animation_decoder.rs
src-tauri/src/commands/: cmd_utils.rs  mod.rs
src-tauri/src/file_handler/: mod.rs
src-tauri/src/syntax_highlight/: mod.rs
src-tauri/src/syntax_highlight/languages/: javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/assets/styles/: app.css  editor.css  footbar.css  menu.css  sidebar.css  tabbar.css
src/components/: Editor.vue  Footbar.vue  WelcomeMessage.vue
src/components/menu/: MenuItemFile.vue  MenuLayout.vue  NewFileDialog.vue
src/components/sidebar/: SidebarItem.vue  SidebarLayout.vue
src/components/tabbar/: TabbarItem.vue  TabbarLayout.vue
src/helpers/: app.ts  tabbar.ts  utils.ts
src/helpers/editor/: editing.ts  helper.ts  interfaces.ts  keydown.ts  keyup.ts  move_keys.ts  render.ts
src/helpers/editor/syntax/: javascript.ts  python.ts  rust.ts  tokenize.ts  typescript.ts
src/helpers/editor/vim/: commands.ts  movement.ts  selection.ts
src/helpers/sidebar/: helper.ts
src/store/: helper.ts  index.ts  interfaces.ts
src/tests/: Footbar.test.js
