[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.7", features = [] }
tempfile = "3.2"
thiserror = "1.0.24"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
nom = "7.1.3"
regex = "1.10.6"
image = "0.24.1"
base64 = "0.22.1"
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4", 
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.libwebp-sys2]
version = "0.1.9"
features = ["0_5", "0_6", "1_2", "demux", "mux"]

[features]
static = ["libwebp-sys2/static"]
